<resources>
	<string name="one_time">Enter the One Time password that you received via sms</string>
    <string name="resend_code">Resend Code</string>
    <string name="get_code_via_call">Get Code Via Call</string>
    <string name="next">Next</string>
    <string name="init">Init…</string>
    <string name="unable_to_download_file">Unable to download file</string>
    <string name="connection_not_valid">Selected network route not allowed with current settings you have setup</string>
    <string name="invalid_sip_uri">R4W uri is invalid for call</string>
    <string name="accounts">Accounts</string>
     <string name="refresh">REFRESH</string>
    <string name="other_accounts">Other accounts</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="activate_account">Activate account</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="delete_account">Delete account</string>
    <string name="modify_account">Modify account</string>
    <string name="add_account">Add account</string>
    <string name="choose_wizard">Choose wizard</string>
    <string name="use">Use :</string>
    <string name="use_pstn">Use mobile</string>
    <string name="ongoing_call">Call in Progress</string>
    <string name="missed_call">Missed call</string>
    <string name="recentCalls_empty">No Call Logs</string>
    <string name="filters">Filters</string>
    <string name="filters_desc">To apply when integration to Android is used</string>
    <string name="filters_for">Filters for</string>
    <string name="add_filter">Add filter / rewrite rule</string>
    <string name="delete_filter">Delete filter</string>
    <string name="callLog_delete_entry">Delete this call</string>
    <string name="callLog_delete_all">Delete all calls</string>
    <string name="callLog_delDialog_title">Delete Call Logs</string>
    <string name="callLog_delDialog_message">Are you sure you want to delete all calls from the log?</string>
    <string name="callLog_delDialog_yes">Yes</string>
    <string name="callLog_delDialog_no">No</string>
    <string name="gsm">Mobile</string>
    <string name="dial_tab_name_text">Dial</string>
    <string name="calllog_tab_name_text">CallLogs</string>
    <string name="messages_tab_name_text">Messages</string>
    <string name="favorites_tab_name_text">Favorites</string>
    <string name="menu_disconnect">Log out</string>
    <string name="service_ticker_registered_text">R4W Registered</string>
    <string name="outgoing_call_chooser_call_text">Call</string>
    <string name="reorder">Reorder</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="record_logs">Record logs to send it to dev team and report a bug</string>
    <string name="send_logs">Stop recording logs (OPTIONALLY send it)</string>
    <string name="view_existing_issues">Consult existing issues</string>
    <string name="ok">OK</string>
    <string name="misc">Misc</string>
    <string name="warning">WARNING</string>
    <string name="logoutMessage">Exiting will limit your\navailability, and you might not receive Calls and Message on\nR4W</string>
    <string name="disconnect_and_incoming_explaination">You are configured to be available for this network !!! By clicking OK here you confirm that you don\'t want to be available until next start of the application</string>
    <string name="disconnect_and_future_incoming_explaination">By disconnecting the application, you will not be available on R4W until next start of the application, whatever network settings you set</string>
    <string name="gadget_title">R4W - Account switcher</string>
    <string name="pickup_sip_uri">Pickup R4W contact</string>
    <string name="display_icon_in_status_bar_desc">Should the application display an icon in the status bar when registered</string>
    <string name="display_icon_in_status_bar">Display icon in status bar</string>
    <string name="another_application_use_sip_port">Another application is currently using R4W port! Can\'t start !!!</string>
    <string name="choose_phone">Choose phone</string>
    <string name="no_phone_found">No phone found for this contact</string>
    <string name="show_password">Show password</string>
    <string name="this_codec_is_not_free">**This codec is not free !!!**\nPlease ensure that somebody (your R4W provider or yourself) have purchased a license that allow you to use this codec! We (as application distributors) are not responsible for an illegal use of this codec.\nIt\'s up to you to be sure that you are authorized to use this codec.\nPurchase link : </string>
    <string name="voice_mail">Voice mail</string>
    <string name="voice_mail_number">VM number</string>
    <string name="type_sip_uri_or_autocomplete">R4W uri or autocomplete</string>
    <string name="type_sip_uri_or_autocomplete_edited">Enter Name or Number</string>
    <string name="type_sip_uri_or_autocomplete_edited_Name">Enter Name</string>
    <string name="not_configured_multiple_calls">The application is not configured to allow multiple calls</string>
    <string name="legal_information">Legal information</string>
    <string name="update_nightly_build">Update nightly build</string>
    <string name="loading">Loading</string>
    <string name="reconnect">Reconnect</string>
    <string name="switch_to_text">Switch to text mode</string>
    <string name="switch_to_digit">Switch to digit mode</string>
    <string name="no_voice_mail_configured">No voicemail configured</string>
    <string name="no_accounts">No accounts</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="invert_selection">Invert selection</string>
    <string name="cant_write_file">Error writing file</string>
    <string name="info">Info</string>
    <string name="csipsimple_shortcut">R4W - shortcut</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="activate_presence_sharing">Share presence</string>
    <string name="deactivate_presence_sharing">Stop sharing presence</string>
    <string name="presence">Presence</string>
    <string name="configure">Configure</string>
    <string name="set_android_group">Choose android group</string>
    <string name="set_sip_data">Choose R4W uri data</string>
    <string name="uri_nbr">Phone number</string>
    <string name="uri_im">IM with custom R4W scheme</string>
    <string name="uri_sip">Internet call</string>
<string name="app_name">Roaming4world</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="IncPin">Incorrect PIN No</string>
    <string name="enterpin">Enter Your Pin</string>
    <string name="choosecountry">Choose Your Country</string>
    <string name="phoneno">Enter Your Phone Number without country code</string>
    <string name="registerpin">You are Registered with PIN :</string>
    <string name="mobileno">Your Mobile No :</string>
    <string name="mappedto">You are currently mapped to :</string>
    <string name="currentlymapped">Please Enter your Travelling Destination No</string>
    <string name="callrecord">Call Records</string>
    <string name="map">MAP YOUR NOs.</string>
    <string name="deactivatebtn">DEACTIVATE PIN</string>
    <string name="chnageNumberbtn">CHANGE NUMBER</string>
    <string name="activatebutt">ACTIVATE PIN</string>
    <string name="mapbtn">MAP</string>
    <string name="btnDeactivetService">DEACTIVATE</string>
    <string name="btnActivateService">ACTIVATE</string>
    <string name="setAlert">SET ALERT</string>
    <string name="promo_button">Promotional Pin</string>
    <string name="countryname">Your current location is :</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="r4w15">Validity = 4 days \nTop up = $10 \nCosts you = $15 \nPlease confirm to purchase!</string>
    <string name="no">Cancel</string>
    <string name="r4w25">Validity = 7 days \nTop up = $15 \nCost you = $25 \nPlease confirm to purchase!</string>
    <string name="r4w40">Validity = 15 days \nTop up = $25 \nCost you = $40 \nPlease confirm to purchase!</string>
    <string name="r4w70">Validity = 30 days \nTop up = $50 \nCost you = $70 \nPlease confirm to purchase!</string>
    <string name="message">Message!!</string>
    <string name="service_unavailable">Service currently unavailaible, Please try after sometime</string>
    <string name="r4w_service_unavailable">Roaming4World service is not availaible in your country</string>
    <string name="wrong_pin">Wrong PIN Entered</string>
    <string name="pin_already_use">PIN IS ALREADY IN USE AND CANNOT BE USED IN MULTIPLE APPS</string>
    <string name="data_loading">Data is Loading...</string>
    <string name="alert">ALERT!!</string>
    <string name="country_select">Please select a country !</string>
    <string name="r4w_gps_locator">Roaming4world-GPS Locator</string>
    <string name="current_country">Your current country is </string>
    <string name="selected_country"> and your selected country is </string>
    <string name="confirm_proceed">. \nPlease Confirm to Proceed</string>
    <string name="source_country">Your source country is : </string>
    <string name="phone_no">and your phone no is </string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_is_disabled">GPS seems to be disabled .This is used to update your current location.Please Enable it by pressing Enable</string>
    <string name="enable">Enable</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="payment_made">Payment Has been made.Check Your Mail</string>
    <string name="payment_made1">Your pin successfully recharged.Please refresh your app to view balance and for invoice please check your provided email</string>
    <string name="TV5">Validity = 1 days , Top up = $5 , Cost you = $5 , Please confirm to purchase!</string>
    <string name="TV10">Validity = 5 days , Top up = $10 , Cost you = $10 , Please confirm to purchase!</string>
    <string name="TV15">Validity = 15 days , Top up = $15 , Cost you = $15 , Please confirm to purchase!</string>
    <string name="VD4">Validity = 1 day , Cost you = $4 , Please confirm to purchase!</string>
    <string name="VD15">Validity = 5 days , Cost you = $15 , Please confirm to purchase!</string>
    <string name="VD25">Validity = 10 days , Cost you = $25 , Please confirm to purchase!</string>
    <string name="failure">an extremely unlikely failure occurred: </string>
    <string name="usercancel">The user canceled.</string>
    <string name="invalid_payment">An invalid payment was submitted. Please see the docs.</string>
    <string name="deactivate_pin">Are you sure you want deactivate your PIN, this will completely remove your account!</string>
    <string name="activate_forwarding">Are you sure you want activate forwarding to </string>
   <string name="outcallmessage">To place a call through Roaming4world out you need to get credit first.\nChoose the amount of credits </string>
   <string name="d10">$10</string>
   <string name="d20">$20</string>
   <string name="d30">$50</string>
   <string name="getrates">Get Rates</string>
   <string name="maybelater">Later</string>
    <string name="promoemail">Email</string>
    <string name="promophoneno">Phone No.</string>
    <string name="promocountry">Country</string>
    <string name="getyourpin">Get your Free pin</string>
</resources>